# drift

./: .gitignore  CMakeLists.txt  LICENSE  algos_example.cc  generate_coverage.bat  ranges_example.cc  test_ranges.cc
include/: algorithm.h  drift.h  dysfunction.h  ranges.h  tasks.h
tests/: test_algo.cc  test_gen.cc  test_zip.cc
